# continuous-integration

./: .gitignore  .pre-commit-config.yaml  AUTHORS  BUILD  CODEOWNERS  CONTRIBUTORS  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  build.sh  dependencies.yaml  go.mod  go.sum  plugin.yml  pylintrc  pyproject.toml  requirements.in  requirements_lock.txt  setup.cfg  trigger.py  trigger.sh
.githooks/: pre-commit
agent/: Cargo.toml
agent/src/: lib.rs  main.rs  utils.rs
agent/src/artifact/: mod.rs  upload.rs
agent/src/utils/: follow.rs
agent/tests/: tests.rs
agent/tests/artifact/: mod.rs  upload.rs
agent/tests/data/: test_bep.json  test_bep_duplicated.json  test_bep_undeclared_output.json  test_bep_win.json
agent_metrics/: README.md  start.sh
base/: BUILD  Dockerfile.ubuntu-wily-amd64  Dockerfile.ubuntu-wily-amd64-deploy  Dockerfile.ubuntu-wily-amd64-golang  Dockerfile.ubuntu-wily-amd64-ssh  Dockerfile.ubuntu-xenial-amd64  Dockerfile.ubuntu-xenial-amd64-deploy  Dockerfile.ubuntu-xenial-amd64-ssh  convert_image_to_build.py  create_debs_repositories.sh  debs.bzl  docker_base.bzl  docker_pull.bzl  dockerfile_build.bzl  generated.bzl  regenerate.sh
buildifier/: Dockerfile  build.sh  buildifier.py
buildkite/: BUILD  README.infra.md  README.md  acceptance-test.sh  aggregate_incompatible_flags_test_result.py  aggregate_incompatible_flags_test_result_test.py  android.sh  bazel_auto_sheriff.py  bazel_bench.py  bazel_bench_env_setup.py  bazelci.py  bazelci.sh  bazelci_test.py  bazelci_wrapper_test.sh  bcr_presubmit.py  collect_infra_metrics.py  collect_metrics.py  collect_metrics_test.py  contributors.json  create-docker-cache.sh  create_images.py  create_instance_groups.py  create_instance_template.py  create_instances.py  create_worker.py  culprit_finder.py  emergency.yml  encrypt.py  fetch_bazelbuild_contributors.py  gcloud.py  gcloud_utils.py  incompatible_flag_verbose_failures.py  install-android-sdk.sh  install-azul-zulu-8.sh  install-azul-zulu-9.sh  install-bazel.sh  install-buildkite-agent.sh  install-docker.sh  install-image-version.sh  install-kvm.sh  (+36 more)
buildkite-agent/: build-agent.sh
(+596 files in other folders)
