module(
    name = "bazel_continuous_integration",
    version = "0.1",
)

bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
    extra_pip_args = ["--index-url", "https://pypi.org/simple"],
)
use_repo(pip, "pip")
