[package]
name = "bazelci-agent"
version = "0.1.1"
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
serde_json = "1.0"
clap = "2.33"
structopt = "0.3"
rand = "0.8"
url = "2.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"

[profile.release]
lto = true
debug = true
