[package]
name = "bazelci-agent"
version = "0.1.4"
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
serde_json = "1.0"
clap = "2.33"
structopt = "0.3"
rand = "0.8"
url = "2.2"
reqwest = { version = "0.11.17", default-features = false, features = ["rustls-tls", "blocking", "multipart"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.2"

[profile.release]
lto = true
debug = true
